NOISSUE - Fix staging links (#24)
Signed-off-by: Musilah <nataleigh.nk@gmail.com>

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             securely connect devices over constrained IoT protocols - like MQTT or CoAP. Embrace the future of IoT
             technology confidently, and simplify your IoT device management with our cutting-edge platform.</p>
           <div class="mt-4">
-            <a href="https://magistrala-beta.absmach.eu/" class="btn btn-warning d-inline-block" target="_blank">Try
+            <a href="https://magistrala.absmach.eu/" class="btn btn-warning d-inline-block" target="_blank">Try
               Magistrala</a>
           </div>
         </div>
