--- a/magistrala/index.html
+++ b/magistrala/index.html
@@ -142,7 +142,7 @@
             <a class="nav-link" href="#faq">FAQ</a>
           </li>
           <li class="nav-item ms-lg-2">
-            <a href="https://magistrala-beta.absmach.eu/" class="btn btn-warning d-inline-block me-2 mb-2"
+            <a href="https://magistrala.absmach.eu/" class="btn btn-warning d-inline-block me-2 mb-2"
               target="_blank">Try Magistrala</a>
           </li>
         </ul>
@@ -164,7 +164,7 @@
             databases, optimizing message storage for your IoT infrastructure. Simplify your IoT device management with
             our cutting-edge platform.</p>
           <div class="mt-4">
-            <a href="https://magistrala-beta.absmach.eu/" class="btn btn-warning d-inline-block me-2 mb-2"
+            <a href="https://magistrala.absmach.eu/" class="btn btn-warning d-inline-block me-2 mb-2"
               target="_blank">Try Magistrala</a>
             <a href="https://docs.magistrala.absmach.eu/" class="btn btn-dark d-inline-block mb-2" target="_blank">Read
               the Docs &gt;</a>
@@ -822,7 +822,7 @@
                 <li class="mb-2"><i class="fas fa-check-circle text-deep-blue me-2"></i>10,000 messages</li>
                 <li><i class="fas fa-check-circle text-deep-blue me-2"></i>Basic support</li>
               </ul>
-              <a href="https://magistrala-beta.absmach.eu/register" target="_blank"
+              <a href="https://magistrala.absmach.eu/register" target="_blank"
                 class="btn btn-sm bg-deep-blue mt-2 ms-1 w-auto">Sign Up</a>
             </div>
           </div>
