NOISSUE - Remove Magistrala as a sub-website (#25)
Signed-off-by: ianmuchyri <ianmuchiri8@gmail.com>

--- a/products/index.html
+++ b/products/index.html
@@ -36,7 +36,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="productsDropdown">
               <li class="dropdown-header">Software</li>
-              <li><a class="dropdown-item" href="/magistrala">Magistrala</a></li>
+              <li><a class="dropdown-item" href="https://www.magistrala.absmach.eu">Magistrala</a></li>
               <li><a class="dropdown-item" href="/supermq">SuperMQ</a></li>
               <li><a class="dropdown-item" href="/propeller">Propeller</a></li>
               <li>
