--- a/propeller/index.html
+++ b/propeller/index.html
@@ -69,7 +69,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="productsDropdown">
               <li class="dropdown-header">Software</li>
-              <li><a class="dropdown-item" href="/magistrala">Magistrala</a></li>
+              <li><a class="dropdown-item" href="https://www.magistrala.absmach.eu">Magistrala</a></li>
               <li><a class="dropdown-item" href="/supermq">SuperMQ</a></li>
               <li><a class="dropdown-item" href="javascript:void(0)">Propeller</a></li>
               <li>
