--- a/supermq/index.html
+++ b/supermq/index.html
@@ -70,7 +70,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="productsDropdown">
               <li class="dropdown-header">Software</li>
-              <li><a class="dropdown-item" href="/magistrala">Magistrala</a></li>
+              <li><a class="dropdown-item" href="https://www.magistrala.absmach.eu">Magistrala</a></li>
               <li><a class="dropdown-item" href="javascript:void(0)">SuperMQ</a></li>
               <li><a class="dropdown-item" href="/propeller">Propeller</a></li>
               <li>
