--- a/s1/index.html
+++ b/s1/index.html
@@ -137,11 +137,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 d-flex align-items-center justify-content-center">
-          <div class="video-wrapper">
-            <video autoplay muted loop playsinline>
-              <source src="../img/s1.mp4" type="video/mp4">
-            </video>
-          </div>
+          <img src="../img/s1.png" alt="S1 Gateway" class="img-fluid" style="max-width: 300px; height: auto;">
         </div>
         <div class="col-md-6 mt-5">
           <h1>What is S1</h1>
