add product sheet
Signed-off-by: wambuipixel <kiokowambui015@gmail.com>

--- a/s0/index.html
+++ b/s0/index.html
@@ -263,7 +263,7 @@
   <!-- Footer -->
   <footer class="bg-dark text-white py-3">
     <div class="container">
-      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 mt-4 mb-3">
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-5 mt-4 mb-3">
 
         <!-- About + Social Media Links -->
         <div class="col mb-4 text-center text-md-start">
@@ -308,6 +308,19 @@
             </li>
             <li><i class="fas fa-rocket me-2"></i><a href="/propeller" class="text-white">Propeller - Wasm
                 Orchestrator</a></li>
+          </ul>
+        </div>
+
+        <!-- Resources  -->
+        <div class="col mb-4 text-center text-md-start">
+          <h5>Resources</h5>
+          <ul class="list-unstyled">
+            <li>
+              <a href="https://docs.google.com/presentation/d/11l1cKCRC8Y5OlURpDiIrpjaBtET3A8XB7mRUoPnTWAQ/export/pdf"
+                class="text-white">
+                s0 Datasheet
+              </a>
+            </li>
           </ul>
         </div>
 
