NOISSUE - Fix image alt values (#37)
Signed-off-by: ianmuchyri <ianmuchiri8@gmail.com>

--- a/projects/confidential6g/index.html
+++ b/projects/confidential6g/index.html
@@ -311,44 +311,44 @@
                   <img src="/img/logos/wings-logo.png" alt="Wings" class="img-fluid mb-2" style="max-height: 60px" />
                 </div>
                 <div class="col-6 text-center">
-                  <img src="/img/logos/nokia-1.png" alt="Wings" class="img-fluid mb-2" style="max-height: 60px" />
+                  <img src="/img/logos/nokia-1.png" alt="nokia" class="img-fluid mb-2" style="max-height: 60px" />
                 </div>
                 <div class="col-6 text-center">
-                  <img src="/img/logos/nokia-bellLabs.png" alt="Wings" class="img-fluid mb-2"
+                  <img src="/img/logos/nokia-bellLabs.png" alt="nokia-bellLabs" class="img-fluid mb-2"
                     style="max-height: 60px" />
                 </div>
                 <div class="col-6 text-center">
-                  <img src="/img/logos/telefonica.png" alt="Wings" class="img-fluid mb-2" style="max-height: 60px" />
+                  <img src="/img/logos/telefonica.png" alt="Telefonica" class="img-fluid mb-2" style="max-height: 60px" />
                 </div>
                 <div class="col-6 text-center">
-                  <img src="/img/logos/tue.png" alt="Wings" class="img-fluid mb-2" style="max-height: 60px" />
+                  <img src="/img/logos/tue.png" alt="TUE" class="img-fluid mb-2" style="max-height: 60px" />
                 </div>
                 <div class="col-6 text-center">
-                  <img src="/img/logos/ultraviolet.png" alt="Wings" class="img-fluid mb-2" style="max-height: 60px" />
+                  <img src="/img/logos/ultraviolet.png" alt="Iltraviolet" class="img-fluid mb-2" style="max-height: 60px" />
                 </div>
                 <div class="col-6 text-center">
-                  <img src="/img/logos/zen.png" alt="Wings" class="img-fluid mb-2" style="max-height: 60px" />
+                  <img src="/img/logos/zen.png" alt="Zen" class="img-fluid mb-2" style="max-height: 60px" />
                 </div>
                 <div class="col-6 text-center">
-                  <img src="/img/logos/vtt.png" alt="Wings" class="img-fluid mb-2" style="max-height: 60px" />
+                  <img src="/img/logos/vtt.png" alt="VTT" class="img-fluid mb-2" style="max-height: 60px" />
                 </div>
                 <div class="col-6 text-center">
-                  <img src="/img/logos/tno.png" alt="Wings" class="img-fluid mb-2" style="max-height: 60px" />
+                  <img src="/img/logos/tno.png" alt="TNO" class="img-fluid mb-2" style="max-height: 60px" />
                 </div>
                 <div class="col-6 text-center">
-                  <img src="/img/logos/imdea.png" alt="Wings" class="img-fluid mb-2" style="max-height: 60px" />
+                  <img src="/img/logos/imdea.png" alt="imdea" class="img-fluid mb-2" style="max-height: 60px" />
                 </div>
                 <div class="col-6 text-center">
-                  <img src="/img/logos/tu-gratz.png" alt="Wings" class="img-fluid mb-2" style="max-height: 60px" />
+                  <img src="/img/logos/tu-gratz.png" alt="tu-gratz" class="img-fluid mb-2" style="max-height: 60px" />
                 </div>
                 <div class="col-6 text-center">
-                  <img src="/img/logos/ucd-1.png" alt="Wings" class="img-fluid mb-2" style="max-height: 60px" />
+                  <img src="/img/logos/ucd-1.png" alt="ucd" class="img-fluid mb-2" style="max-height: 60px" />
                 </div>
                 <div class="col-6 text-center">
-                  <img src="/img/logos/tuw.png" alt="Wings" class="img-fluid mb-2" style="max-height: 60px" />
+                  <img src="/img/logos/tuw.png" alt="tuw" class="img-fluid mb-2" style="max-height: 60px" />
                 </div>
                 <div class="col-6 text-center">
-                  <img src="/img/logos/AMA.png" alt="Wings" class="img-fluid mb-2" style="max-height: 60px" />
+                  <img src="/img/logos/AMA.png" alt="AMA" class="img-fluid mb-2" style="max-height: 60px" />
                 </div>
               </div>
             </div>
