MG-35 - Add news section (#39)
* add news section

Signed-off-by: wambuipixel <kiokowambui015@gmail.com>

* use link from medium

Signed-off-by: wambuipixel <kiokowambui015@gmail.com>

* remove html file

Signed-off-by: wambuipixel <kiokowambui015@gmail.com>

* remove unused css

Signed-off-by: wambuipixel <kiokowambui015@gmail.com>

* add news to navbar

Signed-off-by: wambuipixel <kiokowambui015@gmail.com>

* add empty lines

Signed-off-by: wambuipixel <kiokowambui015@gmail.com>

* add empty lines

Signed-off-by: wambuipixel <kiokowambui015@gmail.com>

* add socials

Signed-off-by: ianmuchyri <ianmuchiri8@gmail.com>

---------

Signed-off-by: wambuipixel <kiokowambui015@gmail.com>
Signed-off-by: ianmuchyri <ianmuchiri8@gmail.com>
Co-authored-by: ianmuchyri <ianmuchiri8@gmail.com>

--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
               target="_blank">Blog</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/news" style="color: black;">News</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="https://github.com/absmach" style="color: black;" target="_blank"><i
                 class="fab fa-github"></i></a>
           </li>
@@ -441,8 +444,63 @@
 
 
 
+  <!--News Section-->
+  <section id="news" class="py-5">
+    <div class="container">
+      <div class="row mb-4 align-items-end">
+        <div class="col-md-8">
+          <h2 class="mb-2"> Latest in IoT strategy and Abstract Machines news. </h2>
+        </div>
+        <div class="col-md-4 text-md-end">
+          <a href="/news" class="btn btn-outline-dark btn-sm">
+            View All News <i class="fas fa-arrow-right ms-2"></i>
+          </a>
+        </div>
+      </div>
+      <div class="row g-4">
 
+        <!-- Launch Press Release -->
+        <div class="col-md-4">
+          <div class="card h-100 border-0 shadow-sm">
+            <img src="/img/cloud.jpg" class="card-img-top" alt="Cloud Platform"
+              style="height: 200px; object-fit: cover;">
+            <div class="card-body">
+              <span class="badge text-primary">Press Release</span>
+              <small class="text-muted">Dec 04, 2025</small>
+              <h5 class="card-title mt-2">
+                Magistrala SaaS Officially Launches
+              </h5>
+              <p class="card-text text-muted small mt-3">
+                We've launched a powerful new cloud edge platform designed to accelerate secure, scalable IoT
+                innovation. Explore what's new and how it transforms device connectivity.
+              </p>
+            </div>
 
+            <div class="card-footer bg-white border-0 pb-2">
+              <a href="https://medium.com/abstract-machines-blog/introducing-magistrala-saas-open-source-iot-fully-managed-and-ready-to-scale-53a2a76a95c4"
+                class="text-decoration-none text-dark" target="_blank">
+                <span class="text-primary fw-bold small">
+                  Explore the Launch <i class="fas fa-chevron-right ms-1"></i>
+                </span>
+              </a>
+              <div class="mt-4">
+                <a href="https://www.linkedin.com/company/abstract-machines" class="text-decoration-none me-3" target="_blank">
+                  <i class="fab fa-linkedin text-primary"></i>
+                </a>
+                <a href="https://twitter.com/absmach" class="text-decoration-none" target="_blank">
+                  <i class="fab fa-twitter text-primary"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+    </div>
+  </section>
+  <!-- End of newsroom section-->
 
 
 
