--- a/projects/confidential6g/index.html
+++ b/projects/confidential6g/index.html
@@ -105,6 +105,9 @@
             <a class="nav-link" href="/contact" style="color: black">Contact</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/news" style="color: black;">News</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="https://medium.com/abstract-machines-blog" style="color: black"
               target="_blank">Blog</a>
           </li>
@@ -318,13 +321,15 @@
                     style="max-height: 60px" />
                 </div>
                 <div class="col-6 text-center">
-                  <img src="/img/logos/telefonica.png" alt="Telefonica" class="img-fluid mb-2" style="max-height: 60px" />
+                  <img src="/img/logos/telefonica.png" alt="Telefonica" class="img-fluid mb-2"
+                    style="max-height: 60px" />
                 </div>
                 <div class="col-6 text-center">
                   <img src="/img/logos/tue.png" alt="TUE" class="img-fluid mb-2" style="max-height: 60px" />
                 </div>
                 <div class="col-6 text-center">
-                  <img src="/img/logos/ultraviolet.png" alt="Iltraviolet" class="img-fluid mb-2" style="max-height: 60px" />
+                  <img src="/img/logos/ultraviolet.png" alt="Iltraviolet" class="img-fluid mb-2"
+                    style="max-height: 60px" />
                 </div>
                 <div class="col-6 text-center">
                   <img src="/img/logos/zen.png" alt="Zen" class="img-fluid mb-2" style="max-height: 60px" />
