--- a/supermq/index.html
+++ b/supermq/index.html
@@ -108,6 +108,9 @@
               target="_blank">Blog</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/news" style="color: black;">News</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="https://github.com/absmach" style="color: black;" target="_blank"><i
                 class="fab fa-github"></i></a>
           </li>
