MG-1282 - Improve searchability and search engine indexing (#40)
* improve searchability and search engine indexing

Signed-off-by: ianmuchyri <ianmuchiri8@gmail.com>

* add favicon

Signed-off-by: ianmuchyri <ianmuchiri8@gmail.com>

* add empty lines

Signed-off-by: ianmuchyri <ianmuchiri8@gmail.com>

* update favicon links

Signed-off-by: ianmuchyri <ianmuchiri8@gmail.com>

---------

Signed-off-by: ianmuchyri <ianmuchiri8@gmail.com>

--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
   <meta name="twitter:image:alt" content="Abstract Machines — Secure Cloud-Edge IoT Infrastructure" />
 
 
-  <link rel="icon" href="/img/logos/abstract-machines_logo_symbol-white.svg" type="image/svg+xml">
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="Abstract Machines" />
+  <link rel="manifest" href="/site.webmanifest" />
 
   <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
 
@@ -50,6 +55,40 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
   <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "Organization",
+          "name": "Abstract Machines",
+          "url": "https://www.absmach.eu/",
+          "logo": "https://www.absmach.eu/img/logos/abstract-machines_logo_symbol-white.svg",
+          "sameAs": [
+            "https://twitter.com/absmach",
+            "https://www.linkedin.com/company/abstract-machines",
+            "https://github.com/absmach",
+            "https://medium.com/abstract-machines-blog"
+          ],
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "email": "info@abstractmachines.fr",
+            "contactType": "customer support"
+          }
+        },
+        {
+          "@type": "WebSite",
+          "name": "Abstract Machines",
+          "url": "https://www.absmach.eu/",
+          "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https://www.absmach.eu/search?q={search_term_string}",
+            "query-input": "required name=search_term_string"
+          }
+        }
+      ]
+    }
+  </script>
 </head>
 
 <body>
@@ -484,7 +523,8 @@
                 </span>
               </a>
               <div class="mt-4">
-                <a href="https://www.linkedin.com/company/abstract-machines" class="text-decoration-none me-3" target="_blank">
+                <a href="https://www.linkedin.com/company/abstract-machines" class="text-decoration-none me-3"
+                  target="_blank">
                   <i class="fab fa-linkedin text-primary"></i>
                 </a>
                 <a href="https://twitter.com/absmach" class="text-decoration-none" target="_blank">
