--- a/projects/elastic/index.html
+++ b/projects/elastic/index.html
@@ -8,20 +8,20 @@
   <title>Elastic - Abstract Machines</title>
 
   <!-- Primary Metadata -->
-  <meta name="title" content="Services — Abstract Machines" />
-  <meta name="description" content="IoT services across cloud and edge." />
+  <meta name="title" content="Elastic Project — Abstract Machines" />
+  <meta name="description" content="ELASTIC: Efficient, portabLe And Secure orchesTration for reLIable serviCes in 6G networks." />
   <meta name="robots" content="index, follow" />
   <meta name="keywords"
-    content="IoT, Internet of Things, IoT Platform, IoT Services, Cloud, Edge Computing, Device Management, Messaging, MQTT, CoAP, Security, Access Control, Policy Management, Identity Management" />
+    content="Elastic Project, 6G Orchestration, Edge Computing, IoT Security, WebAssembly, Confidential Computing, Abstract Machines" />
   <meta name="author" content="Abstract Machines" />
 
-  <link rel="canonical" href="https://www.absmach.eu/services" />
+  <link rel="canonical" href="https://www.absmach.eu/projects/elastic/" />
 
   <!-- Social Links -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Services — Abstract Machines" />
-  <meta property="og:description" content="IoT services across cloud and edge." />
-  <meta property="og:url" content="https://www.absmach.eu/services" />
+  <meta property="og:title" content="Elastic Project — Abstract Machines" />
+  <meta property="og:description" content="ELASTIC: Efficient, portabLe And Secure orchesTration for reLIable serviCes in 6G networks." />
+  <meta property="og:url" content="https://www.absmach.eu/projects/elastic/" />
   <meta property="og:image" content="https://www.absmach.eu/img/logos/social-preview.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -29,11 +29,54 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@absmach" />
-  <meta name="twitter:title" content="Services — Abstract Machines" />
-  <meta name="twitter:description" content="IoT services across cloud and edge." />
+  <meta name="twitter:title" content="Elastic Project — Abstract Machines" />
+  <meta name="twitter:description" content="ELASTIC: Efficient, portabLe And Secure orchesTration for reLIable serviCes in 6G networks." />
   <meta name="twitter:image" content="https://www.absmach.eu/img/logos/social-preview.png" />
 
-  <link rel="icon" href="/img/logos/abstract-machines_logo_symbol-white.svg" type="image/svg+xml" />
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="Abstract Machines" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "BreadcrumbList",
+          "itemListElement": [{
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://www.absmach.eu/"
+          },{
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Projects",
+            "item": "https://www.absmach.eu/projects/"
+          },{
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Elastic",
+            "item": "https://www.absmach.eu/projects/elastic/"
+          }]
+        },
+        {
+          "@type": "Project",
+          "name": "Elastic",
+          "description": "Efficient, portabLe And Secure orchesTration for reLIable serviCes.",
+          "url": "https://www.absmach.eu/projects/elastic/",
+          "foundingDate": "2024-03-01",
+          "member": {
+            "@type": "Organization",
+            "name": "Abstract Machines"
+          }
+        }
+      ]
+    }
+  </script>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
