--- a/rex/index.html
+++ b/rex/index.html
@@ -5,9 +5,52 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Rex - Abstract Machines</title>
+  <title>Rex — IoT Rule Engine | Abstract Machines</title>
+  <meta name="description" content="Rex is a lightweight, stream-based rule engine for real-time IoT event processing and automation.">
+  <meta name="keywords" content="Rex, Rule Engine, IoT Automation, Stream Processing, Abstract Machines, SuperMQ">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://www.absmach.eu/rex/">
 
-  <link rel="icon" href="/img/logos/abstract-machines_logo_symbol-white.svg" type="image/svg+xml">
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="Abstract Machines" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "BreadcrumbList",
+          "itemListElement": [{
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://www.absmach.eu/"
+          },{
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Products",
+            "item": "https://www.absmach.eu/products/"
+          },{
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Rex",
+            "item": "https://www.absmach.eu/rex/"
+          }]
+        },
+        {
+          "@type": "SoftwareApplication",
+          "name": "Rex",
+          "operatingSystem": "Linux, Multi-platform",
+          "applicationCategory": "DeveloperApplication",
+          "description": "Rex is a lightweight rule engine for real-time event processing in IoT."
+        }
+      ]
+    }
+  </script>
 
   <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/style.css">
