--- a/s0/index.html
+++ b/s0/index.html
@@ -38,12 +38,53 @@
   <meta name="twitter:image:alt" content="S0 — Low-power IoT Gateway by Abstract Machines" />
 
 
-  <link rel="icon" href="/img/logos/abstract-machines_logo_symbol-white.svg" type="image/svg+xml">
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="Abstract Machines" />
+  <link rel="manifest" href="/site.webmanifest" />
 
   <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "BreadcrumbList",
+          "itemListElement": [{
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://www.absmach.eu/"
+          },{
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Products",
+            "item": "https://www.absmach.eu/products/"
+          },{
+            "@type": "ListItem",
+            "position": 3,
+            "name": "S0 Gateway",
+            "item": "https://www.absmach.eu/s0/"
+          }]
+        },
+        {
+          "@type": "Product",
+          "name": "S0 Low Power Gateway",
+          "image": "https://www.absmach.eu/img/s0.png",
+          "description": "S0 is a low-power RISC-V IoT gateway designed for constrained environments and efficient edge connectivity.",
+          "brand": {
+            "@type": "Brand",
+            "name": "Abstract Machines"
+          }
+        }
+      ]
+    }
+  </script>
 </head>
 
 <body>
