--- a/careers/index.html
+++ b/careers/index.html
@@ -34,13 +34,35 @@
     content="Join Abstract Machines to build secure, scalable IoT systems. See open roles or reach out." />
   <meta name="twitter:image" content="https://www.absmach.eu/img/logos/social-preview.png" />
 
-  <link rel="icon" href="/img/logos/abstract-machines_logo_symbol-white.svg" type="image/svg+xml">
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="Abstract Machines" />
+  <link rel="manifest" href="/site.webmanifest" />
 
   <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [{
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.absmach.eu/"
+      },{
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Careers",
+        "item": "https://www.absmach.eu/careers/"
+      }]
+    }
+  </script>
 </head>
 
 <body>
