--- a/privacy/index.html
+++ b/privacy/index.html
@@ -4,9 +4,46 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Abstract Machines</title>
+    <title>Privacy Policy — Abstract Machines</title>
+    <meta name="description"
+        content="Privacy Policy for Abstract Machines. Learn how we collect, use, and protect your personal data.">
+    <meta name="keywords" content="Privacy Policy, GDPR, Data Protection, Abstract Machines, Personal Data">
+    <meta name="robots" content="noindex, follow">
+    <link rel="canonical" href="https://www.absmach.eu/privacy/">
 
-    <link rel="icon" href="/img/logos/abstract-machines_logo_symbol-white.svg" type="image/svg+xml">
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Abstract Machines" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@graph": [
+          {
+            "@type": "BreadcrumbList",
+            "itemListElement": [{
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://www.absmach.eu/"
+            },{
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Privacy Policy",
+              "item": "https://www.absmach.eu/privacy/"
+            }]
+          },
+          {
+            "@type": "WebPage",
+            "name": "Privacy Policy",
+            "description": "Privacy Policy for Abstract Machines."
+          }
+        ]
+      }
+    </script>
 
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
 
