--- a/projects/index.html
+++ b/projects/index.html
@@ -4,10 +4,79 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EU Projects - Abstract Machines</title>
-  <meta name="description" content="EU research projects that Abstract Machines is involved in">
+  <title>EU Research Projects — Abstract Machines</title>
+  <meta name="description" content="Explore EU-funded research projects involving Abstract Machines. Advancing IoT security, edge computing, and 6G technologies.">
+  <meta name="keywords" content="EU Projects, Research, Horizon Europe, IoT Security, Edge Computing, 6G, Abstract Machines">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://www.absmach.eu/projects/">
 
-  <link rel="icon" href="/img/logos/abstract-machines_logo_symbol-white.svg" type="image/svg+xml">
+  <!-- Open Graph Links -->
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Abstract Machines">
+  <meta property="og:url" content="https://www.absmach.eu/projects/">
+  <meta property="og:title" content="EU Research Projects — Abstract Machines">
+  <meta property="og:description" content="Explore EU-funded research projects involving Abstract Machines. Advancing IoT security, edge computing, and 6G technologies.">
+  <meta property="og:image" content="https://www.absmach.eu/img/logos/social-preview.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@absmach">
+  <meta name="twitter:title" content="EU Research Projects — Abstract Machines">
+  <meta name="twitter:description" content="Explore EU-funded research projects involving Abstract Machines. Advancing IoT security, edge computing, and 6G technologies.">
+  <meta name="twitter:image" content="https://www.absmach.eu/img/logos/social-preview.png">
+
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="Abstract Machines" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "BreadcrumbList",
+          "itemListElement": [{
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://www.absmach.eu/"
+          },{
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Projects",
+            "item": "https://www.absmach.eu/projects/"
+          }]
+        },
+        {
+          "@type": "CollectionPage",
+          "name": "EU Research Projects",
+          "description": "List of EU research projects Abstract Machines participates in.",
+          "mainEntity": {
+            "@type": "ItemList",
+            "itemListElement": [
+              {
+                "@type": "ListItem",
+                "position": 1,
+                "name": "CONFIDENTIAL6G",
+                "url": "https://www.absmach.eu/projects/confidential6g"
+              },
+              {
+                "@type": "ListItem",
+                "position": 2,
+                "name": "Elastic",
+                "url": "https://www.absmach.eu/projects/elastic"
+              }
+            ]
+          }
+        }
+      ]
+    }
+  </script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
